--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 anyhow = "1.0.97"
 crossterm = "0.28.1"
 ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_yaml = "0.9.34"
